# claude-codex-harness-loop-starter

./: .clauderules  .env.example  .gitattributes  .gitignore  .harness.toml  .mcp.json.example  AGENTS.md  CODEX.md  LICENSE  README.md  START_HERE.md  TEMPLATE_MANIFEST.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: impl-coder.md  refactor-fixer.md  score-auditor.md  test-writer.md
.claude/commands/kit/: auto-harness.md  harness-verify.md  recommend.md  resume-break.md
.codex/: hooks.json
.codex/agents/: impl-coder.toml  refactor-fixer.toml  score-auditor.toml  test-writer.toml
.github/workflows/: harness.yml
docs/: .pages  ENVIRONMENTS.md  PORTAL_README.md  _authority.md  _field_cascade.md  _knowledge-architecture.md  _recent.md  index.md
docs/_harness/: TASK_ID_GRAMMAR.md  quality-gates.md
docs/ai-tooling/: AI_TOOLING.md
docs/ai-workflow/: codex_automation_setup_guide.md  codex_claude_review_protocol.md  codex_loop_operating_policy.md  decision_pending.md  delivery_log.md  deployment_log.md  ecc-harness-guide.md  implementation_log.md  plan.md  progress.md  research.md  terminology.md  test_plan.md
docs/ai-workflow/handoffs/: README.md
docs/ai-workflow/reviews/: README.md
docs/ai-workflow/scores/: EXAMPLE_full_lifecycle.json  README.md
docs/ai-workflow/tasks/: T-001_design.md  T-001_plan.md  T-001_research.md
docs/coding-convention/: C.md  JavaScript.md  Python.md  README.md
docs/coding-target/: firmwareCodingProtocol.md  webCodingProtocol.md
docs/engineering/: _TEMPLATE_assumption_leak_audit.md  _TEMPLATE_data_spec.md  _TEMPLATE_engineering_sim.md  _TEMPLATE_erd.md  _TEMPLATE_identifier_unit_contract.md  _TEMPLATE_trade_study.md
docs/experiments/: _TEMPLATE_spike_report.md
docs/pm-guide/: DRIFT_LOCK.md  PHASE_GATES.md  ProductProposal.md  STAGE_DEFINITION_RISKS.md  lifecycle-standard.md  recommendation_policy.md  security_gate.md
docs/retrospective/: lessons_learned.md
scripts/: README.md  _harness_config.py  auto_gate.py  build_docs_portal.py  field_cascade.py  foam_catalog.py  harness_audit_rerun.py  harness_gate_check.sh  harness_init.py  harness_run_verify.sh  harness_status.sh  run_codex_review_bridge.py
tests/: __init__.py  conftest.py  test_harness_hardening.py
tests/e2e/: __init__.py
tests/fixtures/: _TEMPLATE_driver_mock.py  _TEMPLATE_serial_mock.py  __init__.py
tests/integration/: __init__.py  conftest.py
tests/unit/: __init__.py  test_auto_gate.py  test_codex_review_bridge.py
